--- a/includes/css/publisher.css
+++ b/includes/css/publisher.css
@@ -215,13 +215,15 @@ header .intro-text {
 		bottom:-30px;
 	}
 }
+
 #wrapper {
     max-height:110vh !important;
 }
-@media (min-width: 992px) {
+@media (max-width: 992px) {
     #wrapper {
-        max-height: 120vh;
+        max-height: 200vh !important;
     }
+    
 }
 
 .container {
@@ -977,7 +979,17 @@ body {
 }
 #took-a-poo {
     background-color: #2d94ce;
-    height: 230vh;
+    height: 130vh;
     margin-top: -200px;
     opacity: 0.5;
+}
+@media (max-width: 992px) {
+    #need-to-poo {
+        max-height: 97vh !important;
+    }
+    #took-a-poo {
+        max-height: 97vh !important;
+        margin-top: 0px;
+    }
+    
 }
