--- a/includes/css/publisher.css
+++ b/includes/css/publisher.css
@@ -969,19 +969,28 @@ body {
   );
 } */
 .main-need-poo {
+    opacity: 1 !important;
     z-index: 100;
+    height: 700px;
+    margin-top: 100px;
+}
+.took-a-poo {
+    height: 700px;
+    margin-top: 100px;
+    opacity: 1 !important;
+    margin-left: -150px;
 }
 #need-to-poo {
-    background-color: #f66f94;
+    background-color: #fab7c9;
     height: 130vh;
     margin-top: -200px;
-    opacity: 0.5;
+    opacity: 1;
 }
 #took-a-poo {
-    background-color: #2d94ce;
+    background-color: #96c9e6;
     height: 130vh;
     margin-top: -200px;
-    opacity: 0.5;
+    opacity: 1;
 }
 @media (max-width: 992px) {
     #need-to-poo {
@@ -992,4 +1001,69 @@ body {
         margin-top: 0px;
     }
     
+}
+@media (max-width: 1610px) {
+    .main-need-poo {
+        margin-left: -100px !important;
+    }
+}
+@media (max-width: 1418px) {
+    .main-need-poo {
+        margin-left: -50px !important;
+        height: 550px;
+    }
+    .took-a-poo {
+        height: 550px;
+        margin-left: -100px;
+    }
+}
+@media (max-width: 1190px) {
+    .main-need-poo {
+        margin-left: -70px !important;
+        height: 450px;
+    }
+    .took-a-poo {
+        height: 450px;
+        margin-left: -100px;
+    }
+}
+@media (max-width: 992px) {
+    .main-need-poo {
+        margin-left: 0px !important;
+        height: 550px;
+    }
+    .took-a-poo {
+        height: 550px;
+        margin-left: 0px;
+    }
+}
+@media (max-width: 700px) {
+    .main-need-poo {
+        margin-left: -40px !important;
+        height: 550px;
+    }
+    .took-a-poo {
+        height: 550px;
+        margin-left: -40px !important;
+    }
+}
+@media (max-width: 680px) {
+    .main-need-poo {
+        margin-left: -70px !important;
+        height: 550px;
+    }
+    .took-a-poo {
+        height: 550px;
+        margin-left: -100px !important;
+    }
+}
+@media (max-width: 580px) {
+    .main-need-poo {
+        margin-left: -120px !important;
+        height: 550px;
+    }
+    .took-a-poo {
+        height: 550px;
+        margin-left: -140px !important;
+    }
 }
