--- a/includes/css/publisher.css
+++ b/includes/css/publisher.css
@@ -986,8 +986,20 @@ body {
     margin-top: -200px;
     opacity: 1;
 }
+#need-to-poo-map {
+    background-color: #fab7c9;
+    height: 130vh;
+    margin-top: -200px;
+    opacity: 1;
+}
 #took-a-poo {
     background-color: #96c9e6;
+    height: 130vh;
+    margin-top: -200px;
+    opacity: 1;
+}
+#took-a-poo-map {
+    background-color: #fab7c9 !important;
     height: 130vh;
     margin-top: -200px;
     opacity: 1;
@@ -1000,7 +1012,9 @@ body {
         max-height: 97vh !important;
         margin-top: 0px;
     }
-    
+    #need-to-poo-map {
+        margin-top: -214px !important;
+    }
 }
 @media (max-width: 1610px) {
     .main-need-poo {
@@ -1066,4 +1080,7 @@ body {
         height: 550px;
         margin-left: -140px !important;
     }
+}
+#map {
+    margin-top: 55px;
 }
