--- a/includes/css/publisher.css
+++ b/includes/css/publisher.css
@@ -1050,6 +1050,9 @@ body {
         height: 550px;
         margin-left: 0px;
     }
+    .washroom-top {
+        margin-top: -70px !important;
+    }
 }
 @media (max-width: 700px) {
     .main-need-poo {
@@ -1083,4 +1086,12 @@ body {
 }
 #map {
     margin-top: 55px;
+}
+.washroom-top {
+    width:100%;
+    margin-top: 50px;
+}
+.washroom-about {
+    background-color: #efefef;
+    height: 50%;
 }
