--- a/includes/css/publisher.css
+++ b/includes/css/publisher.css
@@ -1095,3 +1095,25 @@ body {
     background-color: #efefef;
     height: 50%;
 } 
+button.accordion {
+            background-color: #E5F5E3;
+            color: #f66f94;
+            cursor: pointer;
+            padding: 15px;
+            width: 100%;
+            border: solid;
+            text-align: left;
+            outline: none;
+            font-size: 20px;
+            transition: 0.4s;
+        }
+
+        button.accordion.active, button.accordion:hover {
+            background-color: #ddd;
+        }
+
+        div.panel {
+            padding: 0 18px;
+            display: none;
+            background-color: white;
+        }
